applications/mail/mailcore.yaml
# StatefulSet for mail core service
---
kind: StatefulSet
apiVersion: apps/v1beta1
metadata:
  name: mailman-core
  namespace: mail
  labels:
    app: mail-suit-service
spec:
  serviceName: mail-suit-service
  replicas: 1
  selector:
    matchLabels:
      app: mail-suit-service
  template:
    metadata:
      labels:
        app: mail-suit-service
    spec:
      containers:
        - name: mailman-core
          image: swr.cn-north-4.myhuaweicloud.com/opensourceway/common/mail-core:v0.1.1
          imagePullPolicy: "IfNotPresent"
          volumeMounts:
            - mountPath: /opt/mailman/
              name: mailman-core-volume
            - mountPath: /usr/lib/python3.6/site-packages/mailman/runners/command.py
              name: mailman-core-config-volume
              subPath: command.py
            - mountPath: /usr/lib/python3.6/email/base64mime.py
              subPath: base64mime.py
              name: mailman-core-config-volume
            - mountPath: /usr/lib/python3.6/site-packages/mailman/app/subscriptions.py
              subPath: subscriptions.py
              name: mailman-core-config-volume
            - mountPath: /usr/lib/python3.6/email/quoprimime.py
              subPath: quoprimime.py
              name: mailman-core-config-volume
            - mountPath: /usr/lib/python3.6/site-packages/mailman/mta/base.py
              name: mailman-core-base-py
              subPath: base.py
            - mountPath: /opt/core-debug/docker-entrypoint.sh
              subPath: docker-entrypoint.sh
              name: entry-point-config
          command:
            - /bin/sh
            - -c
            - |
              export DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@mailman-database-0.mail-suit-service.mail.svc.cluster.local/mailmandb
              sed -i "s/charset: us-ascii/charset: utf-8/g" /usr/lib/python3.6/site-packages/mailman/config/schema.cfg;
              cp /opt/core-debug/docker-entrypoint.sh /usr/local/bin/docker-entrypoint.sh;
              chmod +x /usr/local/bin/docker-entrypoint.sh;
              exec docker-entrypoint.sh master --force
      #NOTE: Empty dir can't be used in a production dir. Please upgrade it before using.
      volumes:
        - name: mailman-core-config-volume
          configMap:
            name: mailman-core-configmap
        - name: mailman-core-base-py
          configMap:
            name: mailman-core-base-py-configmap
        - name: entry-point-config
          configMap:
            name: core-entrypoint-configmap
        - name: mailman-core-volume
          persistentVolumeClaim:
            claimName: config-vol
