applications/mail/maildatabase.yaml
# StatefulSet for postgres database service
---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: mailman-database
  namespace: mail
  labels:
    app: mail-suit-service
spec:
  serviceName: mail-suit-service
  replicas: 1
  selector:
    matchLabels:
      app: mail-suit-service
  template:
    metadata:
      labels:
        app: mail-suit-service
    spec:
      containers:
        - name: mailman-database
          image: swr.cn-north-4.myhuaweicloud.com/opensourceway/common/postgres:9.6-alpine
          imagePullPolicy: "IfNotPresent"
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: mailman-database-volume
              subPath: postgres
      volumes:
        - name: mailman-database-volume
          persistentVolumeClaim:
            claimName: db-data-vol
