applications/mail/mtaservice.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mailman-exim4-service
  namespace: mail
  annotations:
    kubernetes.io/elb.class: union
    kubernetes.io/elb.id: 96d5b2cf-4e23-49b3-aa75-09e388dad123
    kubernetes.io/elb.lb-algorithm: ROUND_ROBIN
spec:
  #We need set this into 'Local' since we need get the client IP for relay excluding.
  externalTrafficPolicy: Local
  loadBalancerIP: 49.4.78.4
  ports:
  - port: 25
    name: exim4-port
    targetPort: 25
    protocol: TCP
  - port: 465
    name: exim4-port-2
    targetPort: 465
    protocol: TCP
  selector:
    component: mail-exim4-service
  type: LoadBalancer

# StatefulSet for exim4 services
---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: mailman-exim4
  namespace: mail
  labels:
    app: mail-suit-service
    component: mail-exim4-service
spec:
  serviceName: mail-suit-service
  replicas: 1
  selector:
    matchLabels:
      app: mail-suit-service
      component: mail-exim4-service
  template:
    metadata:
      labels:
        app: mail-suit-service
        component: mail-exim4-service
    spec:
      containers:
        - name: mailman-exim4
          #NOTE: This image is directly built from our dockerfile located in exim4 folder
          image: swr.cn-north-4.myhuaweicloud.com/opensourceway/app-mailman/mailman-exim-new-build:3d97dff8206e4262c0fa2e218cdacb40e168c56a1672141405
          imagePullPolicy: "IfNotPresent"
          volumeMounts:
            - mountPath: /opt/mailman/
              name: mailman-core-data
            - mountPath: /var/log/exim/
              name: mailman-exim4-log
            - name: mailman-secrets
              mountPath: /etc/exim/passwd.ro
              subPath: exim4_credential
            - name: mailman-cert-secrets
              mountPath: /etc/exim/exim.crt.ro
              subPath: server_crt
            - name: mailman-cert-secrets
              mountPath: /etc/exim/exim.key.ro
              subPath: server_key
            - name: mailman-secrets
              mountPath: /etc/exim/dkim/mindspore.key.ro
              subPath: dkim_key
            - name: exim4-tls-secret
              mountPath: /etc/exim/ssl_pool/mindspore.cn.crt
              subPath: mindspore_cn_crt
            - name: exim4-tls-secret
              mountPath: /etc/exim/ssl_pool/mindspore.cn.key
              subPath: mindspore_cn_key
            - name: exim-config
              mountPath: /etc/exim/exim.conf
              subPath: exim_conf
          # NOTE: since we added new configuration files we need reload exim4 and start up
          # 1. update password  and key file mode
          # 2. update the log folder permission
          # 3. reconfigure exim4
          # 4. start the service
          command:
            - /bin/sh
            - -c
            - |
              cp /etc/exim/passwd.ro /etc/exim/passwd
              cp /etc/exim/exim.crt.ro /etc/exim/exim.crt
              cp /etc/exim/exim.key.ro /etc/exim/exim.key
              cp /etc/exim/dkim/mindspore.key.ro /etc/exim/dkim/mindspore.key
              chown root:exim /etc/exim/passwd /etc/exim/exim.crt /etc/exim/exim.key /etc/exim/dkim/mindspore.key
              chmod 755 /etc/exim/passwd /etc/exim/exim.crt /etc/exim/exim.key /etc/exim/dkim/mindspore.key
              mkdir -p /var/log/exim
              exec tini -- exim -bd -v;
      #NOTE: Empty dir can't be used in a production dir. Please upgrade it before using.
      volumes:
        - name: mailman-core-data
          persistentVolumeClaim:
            claimName: config-vol
        - name: mailman-exim4-log
          persistentVolumeClaim:
            claimName: exim-log-data
        - name: mailman-secrets
          secret:
            secretName: mailman-secrets
        - name: mailman-cert-secrets
          secret:
            secretName: mailman-cert-secrets
        - name: exim4-tls-secret
          secret:
            secretName: mailman-tls-secrets
        - name: exim-config
          configMap:
            name: exim-configmap
