applications/mail/webservice.yaml
# Config web service
---
apiVersion: v1
kind: Service
metadata:
  name: mailman-web-service
  namespace: mail
spec:
  ports:
  - port: 8000
    name: website-port-uwsgi-http
    targetPort: 8000
    protocol: TCP
  - port: 80
    name: website-port-http
    targetPort: 80
    protocol: TCP
  selector:
    component: mail-web-service
  type: ClusterIP

# Deployment for mail web service
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mailman-web
  namespace: mail
  labels:
    component: mail-web-service
    app: mail-suit-service
spec:
  replicas: 2
  selector:
    matchLabels:
      component: mail-web-service
      app: mail-suit-service
  template:
    metadata:
      labels:
        component: mail-web-service
        app: mail-suit-service
    spec:
      hostname: mailman-web
      containers:
        - name: mailman-web
          # We modified the mail-web image to add static folder.
          image: swr.cn-north-4.myhuaweicloud.com/opensourceway/common/mail-web:v1.0.2
          imagePullPolicy: "Always"
          volumeMounts:
            - mountPath: /opt/mailman-web-config
              name: mailman-web-configmap-volume
            - mountPath: /etc/nginx/nginx.conf
              name: mailman-nginx-configmap-volume
              subPath: nginx.conf
            - mountPath: /etc/nginx/conf.d/default.conf
              name: mailman-nginx-configmap-volume
              subPath: default.conf
            - mountPath: /opt/mailman-web-data
              name: mailman-web-volume
            - mountPath: /usr/lib/python3.6/site-packages/postorius/templates/postorius/lists/summary.html
              name: mailman-webpage-hack-volume
              subPath: summary.html
            - mountPath: /usr/lib/python3.6/site-packages/postorius/forms/list_forms.py
              name: mailman-webpage-hack-volume
              subPath: list_forms.py
          resources:
            requests:
              cpu: 4000m
              memory: 6000Mi
            limits:
              cpu: 8000m
              memory: 8000Mi
          #NOTE: Command is overwritten for the purpose of copy config file into dest folder
          command:
            - /bin/sh
            - -c
            - |
              export DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@mailman-database-0.mail-suit-service.mail.svc.cluster.local/mailmandb
              cp /opt/mailman-web-config/settings_local.py /opt/mailman-web-data;
              cp /opt/mailman-web-config/base.html /usr/lib/python3.6/site-packages/postorius/templates/postorius;
              #disable signup page for mailman web hyperkitty
              cp /opt/mailman-web-config/base2.html /usr/lib/python3.6/site-packages/hyperkitty/templates/hyperkitty/base.html
              cp /opt/mailman-web-config/email.py /usr/lib/python3.6/site-packages/hyperkitty/models/email.py
              exec docker-entrypoint.sh uwsgi --ini /opt/mailman-web/uwsgi.ini;
      #NOTE: Empty dir can't be used in a production dir. Please upgrade it before using.
        - name: nginx-web
          image: swr.cn-north-4.myhuaweicloud.com/opensourceway/common/nginx:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
          - mountPath: /etc/nginx/nginx.conf
            name: mailman-nginx-configmap-volume
            subPath: nginx.conf
          - mountPath: /etc/nginx/conf.d/default.conf
            name: mailman-nginx-configmap-volume
            subPath: default.conf
          - mountPath: /opt/mailman-web-data
            name: mailman-web-volume  
      volumes:
        - name: mailman-web-volume
          emptyDir: {}
        - name: mailman-web-configmap-volume
          configMap:
            name: mailman-web-configmap
        - name: mailman-cert-secrets
          secret:
            secretName: mailman-cert-secrets
        - name: mailman-webpage-hack-volume
          configMap:
            name: mailman-webpage-hack
        - name: mailman-nginx-configmap-volume
          configMap:
            name: mailman-nginx-configmap
